Fix the !ENABLE(FILTERS) && !ENABLE(CSS_FILTERS) build after r167497 https://bugs.webkit.org/show_bug.cgi?id=134679

Patch by Tibor Meszaros <tmeszaros.u-szeged@partner.samsung.com> on 2014-07-14
Reviewed by Darin Adler.

* html/ImageData.cpp:
* platform/graphics/cairo/ImageBufferCairo.cpp:

Canonical link: https://commits.webkit.org/152847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171083 268f45cc-cd09-0410-ab3c-d52691b4dbfc